<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="redirect_uri_not_valid">Your redirect URI is not in valid format</string>
    <string name="buy_tym_bank">Buy TYM via bank</string>
    <string name="buy_tym_sms">Buy TYM via SMS</string>
    <string name="buy_tym_card">Buy TYM via cards</string>
    <string name="buy_tym_paypal">Buy TYM via Paypal</string>
    <string name="vnd_currency">VNĐ</string>
    <string name="get_x_tym">Get %d</string>
    <string name="green_tym">green TYM</string>
    <string name="cancel">Cancel</string>
    <string name="login_ing">Logging in&#8230;</string>
    <string name="timeout">Connection timeout. Please try again</string>
    <string name="error">Error occurred, please try again</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
	<string name="validator_email">The e-mail address is not in a valid format.</string>
    <string name="validator_empty">You must complete this field.</string>
    <string name="validator_url">The URL entered is incorrect.</string>
    <string name="validator_confirm">The confirm password does not match.</string>
    <string name="validator_alnum">The value has not only alnum characters</string>
    <string name="validator_hex">The value has not only hexadecimal digit characters</string>
    <string name="validator_regexp">The value does not match against pattern.</string>
    <string name="app_name">AppotaSDK</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading">Loading&#8230;</string>
    <string name="error_nega1">Interrupt exception. [Error code: %d]</string>
    <string name="error_nega2">Acess token is invalid. [Error code: %d]</string>
    <string name="error_nega3">Unkownn rror. [Error code: %d]</string>
    <string name="error_nega4">Connection timeout. Please try again [Error code: %d]</string>
    <string name="error_code1">Invalid parameters. [Error code: %d]</string>
    <string name="error_code91">Server is now busy. [Error code: %d]</string>
    <string name="error_code3">User or app forbidden or not exists. [Error code: %d]</string>
    <string name="error_code10">This api currently only available in Vietnam. [Error code: %d]</string>
    <string name="error_code7">Transaction is not exists. [Error code: %d]</string>
    <string name="error_code8">This application is forbidden. [Error code: %d]</string>
	<string name="error_code9">Transaction is not success. [Error code: %d]</string>
	<string name="error_code11">The input amount is not enough. [Error code: %d]</string>
	<string name="error_code19">The card is not exists or used. [Error code: %d]</string>
	<string name="transaction_request_sent">Transaction request is submitted. We will response right now</string>
	
	<string name="card_type">Card type</string>
	<string name="card_value">Card value</string>
	<string name="input_card_serial">Input card serial</string>
    <string name="input_card_code">Input card code</string>
    <string name="confirm">Confirm</string>
    <string name="card_code_blank">Please enter card code</string>
    <string name="card_serial_blank">Please enter card serial</string>
    <string name="confirm_payment">Are you sure?</string>
    <string name="paypal_activity_title">Press the button below to continue</string>
</resources>