<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <TextView
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/card_type" />

    <Spinner
        android:id="@+id/spn_card_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/spinner_bg"
        android:entries="@array/card_type" />

    <TextView
        style="@style/BlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/card_value" />

    <EditText
        android:id="@+id/edit_card_serial"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/edit_text_white"
        android:hint="@string/input_card_serial"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/edit_card_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/edit_text_white"
        android:singleLine="true"
        android:hint="@string/input_card_code" />

    <Button
        android:id="@+id/btn_confirm"
        style="@style/SimpleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:onClick="confirmPayment"
        android:text="@string/confirm" />

</LinearLayout>